--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -13,7 +13,7 @@ jobs:
     - name: Install
       run: |
         sudo apt-get install -y python3-pip lintian
-        pip3 install flake8 doc8
+        pip3 install flake8 doc8 --break-system-packages
     - name: Run linter 
       run: ./utils/lint.sh
 
